added background, removed submit from modal

--- a/bcx18_here.html
+++ b/bcx18_here.html
@@ -20,7 +20,7 @@
 				<div class="navbar-home-custom">WaySign</div>
 			</div>
 			<div class="col-sm-1">
-				<img src="if_package_toys_1443.png" alt="Smiley face" height="42" width="42" />
+				<img src="if_package_toys_1443.png" alt="Smiley face" height="42" width="42"/>
 			</div>
 			<div class="col-sm-3">
 				<div class="custom-navbar-text">Welcome 0x234dd</div>				 
@@ -57,13 +57,13 @@
 					  <div class="modal-body">
 						<form id="commentForm" >
 							<div class="form-group">
-								<input type="text" class="form-control" name="comment" id="recipient-name" placeholder="Add your commentary"></input>
+								<input type="text" class="form-control" name="comment" id="comment-text" placeholder="Add your commentary"></input>
 							</div>
 						</form>
 					  </div>
 					  <div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						<button type="submit" class="btn btn-primary" form="commentForm" onClick="addComment()">Submit</button>
+						<button type="button" class="btn btn-primary" form="commentForm" onClick="addComment()" data-dismiss="modal">Submit</button>
 					  </div>
 					</div>
 				  </div>
