Array of locations implemented

--- a/bcx18_here.html
+++ b/bcx18_here.html
@@ -20,7 +20,7 @@
 				<div class="navbar-home-custom">WaySign</div>
 			</div>
 			<div class="col-sm-1">
-				<img src="if_package_toys_1443.png" alt="Smiley face" height="42" width="42"/>
+				<img src="user_pic-01.png" alt="Smiley face" height="42" width="42"/>
 			</div>
 			<div class="col-sm-3">
 				<div class="custom-navbar-text">Welcome 0x234dd</div>				 
@@ -37,8 +37,7 @@
 			</div>
 			
 			<div class="container">
-				<button id="addCommentButton" type="button" class="btn btn-primary button-image image" onClick="placeComment()">
-				  Add comment
+				<button id="addCommentButton" type="button" class="button-only-image add-button" style="background-image:url('if_sign-add_299068.png');" onClick="placeComment()" data-toggle="tooltip" data-placement="top" title="Add new comment">
 				</button>
 				<button id="commentPlacedButton" type="button" class="btn btn-primary" onClick="commentPlaced()" style="display: none">
 					Place comment to current location
@@ -103,11 +102,11 @@
 
 		// Now use the map as required...
 		moveMapToBerlin(map);
+		setMarker();
 		
 	</script>
-	
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
